--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -9,12 +9,7 @@
   <div class="lists-navbar">
     <nav class="navbar navbar-light navbar-expand-sm custom-navbar">
       <div class="container">
-        <button class="navbar-toggler custom-toggler" 
-          type="button" data-toggle="collapse" 
-          data-target="#navbarLists" 
-          aria-controls="navbarLists" 
-          aria-expanded="false" 
-          aria-label="Toggle navigation">
+        <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarLists" aria-controls="navbarLists" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
