--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -5,3 +5,15 @@
 .custom-dropdown .dropdown-menu.show {
   min-width: auto;
 }
+
+@media (min-width: 768px) {
+
+  .custom-navbar .nav-link {
+     border-right: 1px solid #999;
+   }
+
+  .custom-navbar .nav-item:last-child .nav-link {
+    border-right: none;
+  }
+
+}
