--- a/src/app/lists/items-view/items-view.component.html
+++ b/src/app/lists/items-view/items-view.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-4" >
     <img class="img-fluid img-thumbnail"
-      src="{{items && items.image || '../../../assets/images/default_image.jpg'}}" />
+      src="{{items && items.image || './assets/images/default_image.jpg'}}" />
   </div>
   <div class="col-md-8">
     <div class="row">
