--- a/src/app/lists/item-view/item-view.component.html
+++ b/src/app/lists/item-view/item-view.component.html
@@ -1,12 +1,14 @@
 <div class="container custom-item rounded col-md-12 col-sm-12 ">
   <div class="row">
-    <div class="col-md-5 image-fake">
-      <img class="image"  src="{{item.image && item.image || '../../../assets/images/default_image.jpg'}}" />
+    <div class="col-md-5 image-fake" *ngIf="!!item">
+      <img class="image"
+        src="{{item && item.image || './assets/images/default_image.jpg'}}" />
     </div>
     <div class="col-md-7 " *ngIf="!!item">
-      <h6 class="text-primary" ><h4>{{'ITEMS_VIEW.ITEM_NAME' | translate}} </h4> {{item.name}}</h6>
-      <p>
-      </p>
+      <h6 class="text-primary">
+        {{'ITEMS_VIEW.ITEM_NAME' | translate}}
+      </h6>
+      <p>{{item.name}}</p>
       <div class="row justify-content-between">
         <div class="col-md-4">
           <p class="text-danger col-md-4">$ {{item.price}}</p>
