--- a/src/app/lists/items-view/items-view.component.html
+++ b/src/app/lists/items-view/items-view.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-4" >
+  <div class="col-md-4">
     <img class="img-fluid img-thumbnail"
       src="{{items && items.image || './assets/images/default_image.jpg'}}" />
   </div>
@@ -10,7 +10,7 @@
           {{items.name}}
         </h4>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-5" *ngIf="!!items">
         <a class="nav-link" routerLink="/lists/edit/{{ items._id }}">
           {{ 'LISTS.EDIT' | translate }}
         </a>
